Some performance findings by findbugs report
git-svn-id: https://svn.apache.org/repos/asf/james/protocols/trunk@1084126 13f79535-47bb-0310-9956-ffa450edef68